--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port = 8000
+
+kafka.server=localhost:9092
+kafka.group.id=server.broadcast
+spring.kafka.email.email.verification.code.topic=hermes-shop-email-sender-verification-code
