--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/hermes
-spring.datasource.username=hermes
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://docker_db/hermes
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
