--- a/hermes_shop_mailsender/src/main/resources/application.properties
+++ b/hermes_shop_mailsender/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-kafka.server=localhost:9092
+kafka.server=kafka:9092
 kafka.group.id=server.broadcast
+spring.kafka.consumer.client-id=email-sender
+
 server.port=8081
 verify.email.path=/users/verifyEmail
 admin.email=news.feed@inbox.ru
 from.email=news.feed@inbox.ru
 from.name=NewsFeed
-spring.kafka.email.email.verification.code.topic=hermes-shop-email-sender-verification-code
+spring.kafka.email.verification.code.topic=hermes-shop-email-sender-verification-code-0
 
 
 
