--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
       context: ./hermes_shop
       dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - 8085:8080
     restart: always
     depends_on:
       - docker_db
     networks:
       - my_new_net
 
-  email-sender:
+  email_sender:
     build:
       context: ./hermes_shop_mailsender
       dockerfile: Dockerfile
@@ -59,7 +59,7 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ADVERTISED_PORT: "9092"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "hermes-shop-email-sender-verification-code:1:1:delete"
+      KAFKA_CREATE_TOPICS: "hermes-shop-email-sender-verification-code"
     depends_on:
       - zookeeper
 networks:
