--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-server.port = 8000
 
-kafka.server=localhost:9092
-kafka.group.id=server.broadcast
-spring.kafka.email.email.verification.code.topic=hermes-shop-email-sender-verification-code
+kafka.server=kafka:9092
+spring.kafka.producer.client-id=hermes-application
+spring.kafka.email.verification.code.topic=hermes-shop-email-sender-verification-code
