--- a/hermes_shop/pom.xml
+++ b/hermes_shop/pom.xml
@@ -62,10 +62,19 @@
             <artifactId>spring-kafka</artifactId>
             <version>2.4.6.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>io.projectreactor.kafka</groupId>
             <artifactId>reactor-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
         </dependency>
 
 
