--- a/hermes_shop/src/main/resources/application-dev.properties
+++ b/hermes_shop/src/main/resources/application-dev.properties
@@ -5,8 +5,9 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-server.port = 8000
-
+server.port=8000
 kafka.server=localhost:9092
 kafka.group.id=server.broadcast
 spring.kafka.email.email.verification.code.topic=hermes-shop-email-sender-verification-code
+security.jwt.token.secret-key=super-secret-key
+security.jwt.token.expire-length=3600000
