--- a/hermes_shop/pom.xml
+++ b/hermes_shop/pom.xml
@@ -58,6 +58,12 @@
             <version>5.2.0.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>2.4.6.RELEASE</version>
