--- a/hermes_shop/pom.xml
+++ b/hermes_shop/pom.xml
@@ -91,6 +91,11 @@
             <version>19.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
 
     </dependencies>
