--- a/hermes_shop/src/main/resources/application-dev.properties
+++ b/hermes_shop/src/main/resources/application-dev.properties
@@ -20,4 +20,7 @@ spring.kafka.email.email.verification.code.topic=hermes-shop-email-sender-verifi
 security.jwt.token.secret-key=super-secret-key
 security.jwt.token.expire-length=3600000
 
+
+pagination.count.product = 10
+
 upload.path=/home/daddy/dev/pics
