--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 kafka.server=kafka:9092
 spring.kafka.producer.client-id=hermes-application
 spring.kafka.email.verification.code.topic=hermes-shop-email-sender-verification-code
+
+
+pagination.count.product = 10
