--- a/hermes_shop/src/main/resources/application-dev.properties
+++ b/hermes_shop/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/hermes?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=hermes_user
+spring.datasource.password=hermes123$
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
 spring.liquibase.url=jdbc:mysql://localhost:3306/hermes?serverTimezone=UTC
-spring.liquibase.user=root
-spring.liquibase.password=root
+spring.liquibase.user=hermes_user
+spring.liquibase.password=hermes123$
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
