--- a/hermes_shop_mailsender/Dockerfile
+++ b/hermes_shop_mailsender/Dockerfile
@@ -6,6 +6,7 @@ RUN mvn clean package
 FROM java:8
 
 COPY --from=0 /tmp/target/hermes-mail-sender-1.0-SNAPSHOT.jar /opt/
+EXPOSE 8081
 
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/opt/hermes-mail-sender-1.0-SNAPSHOT.jar"]
 
