--- a/hermes_shop/src/main/resources/application-dev.properties
+++ b/hermes_shop/src/main/resources/application-dev.properties
@@ -1,9 +1,8 @@
-server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/hermes?serverTimezone=UTC
 spring.datasource.username=hermes_user
 spring.datasource.password=hermes123$
-
-spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+server.port=8000
+spring.liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
 spring.liquibase.url=jdbc:mysql://localhost:3306/hermes?serverTimezone=UTC
 spring.liquibase.user=hermes_user
 spring.liquibase.password=hermes123$
@@ -12,6 +11,8 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
 
 kafka.server=localhost:9092
 kafka.group.id=server.broadcast
@@ -24,3 +25,4 @@ security.jwt.token.expire-length=3600000
 pagination.count.product = 10
 
 upload.path=/home/daddy/dev/pics
+
