--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://docker_db/hermes
+spring.datasource.url=jdbc:mysql://docker_db:3306/hermes
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
@@ -6,9 +6,18 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
+spring.liquibase.url=jdbc:mysql://docker_db/hermes
+spring.liquibase.user=root
+spring.liquibase.password=root
+
 kafka.server=kafka:9092
 spring.kafka.producer.client-id=hermes-application
 spring.kafka.email.verification.code.topic=hermes-shop-email-sender-verification-code
 
+security.jwt.token.secret-key=super-secret-key
+security.jwt.token.expire-length=3600000
 
 pagination.count.product = 10
+
+upload.path=/home/daddy/dev/pics
