--- a/hermes_shop/src/main/resources/application.properties
+++ b/hermes_shop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://docker_db:3306/hermes
+spring.datasource.url=jdbc:mysql://db:3306/hermes
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.liquibase.change-log=classpath:/liquibase/db.changelog-master.xml
-spring.liquibase.url=jdbc:mysql://docker_db/hermes
+spring.liquibase.url=jdbc:mysql://db/hermes
 spring.liquibase.user=root
 spring.liquibase.password=root
 
